docs(claude): add multi-currency architecture section to CLAUDE.md
Documents tenant base currency, exchange rate management, cross-currency
transfer flow, key files, and Java 25 build compatibility notes.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>